--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -43,6 +43,8 @@ li a img {
     border: none;
     background-color: transparent;
     cursor: pointer;
+    color: red;
+    // font-size: 24px;
 }
 
 .favorite.not {
