--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,6 +6,13 @@
 
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 html {
     font-size: 16px;
 }
