--- a/frontend/src/app/pages/register-page/register-page.component.html
+++ b/frontend/src/app/pages/register-page/register-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<section class="container">
     <div class="container__details">
         <app-title class="container__details__title" title="Register"></app-title>
         <form class="container__form" [formGroup]="registerForm">
@@ -72,4 +72,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
