--- a/frontend/src/app/pages/register-page/register-page.component.scss
+++ b/frontend/src/app/pages/register-page/register-page.component.scss
@@ -34,6 +34,7 @@
         text-align: center;
 
         &__inputs {
+            position: relative;
             &__email, &__password {
                 padding: .7rem 2rem;
                 border-radius: 2rem;
@@ -63,6 +64,15 @@
                         text-decoration: underline;
                     }
                 }
+            }
+
+            & > &__eye {
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                top: 10px;
+                right: 20px;
+                cursor: pointer;
             }
         }
 
