--- a/frontend/src/app/pages/login-page/login-page.component.scss
+++ b/frontend/src/app/pages/login-page/login-page.component.scss
@@ -2,19 +2,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
     background-color: hsl(0, 34%, 49%);
+    height: 94.5vh;
     &__details {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 5rem;
-        margin: 4.7rem;
+        padding: 3rem;
+        margin: 0;
         border: 1px solid #e72929;
         border-radius: 2rem;
         background-color: #ecc5c5;
-        height: 100%;
+        max-width: 90%;
+        box-sizing: border-box;
         &__title {
             margin-bottom: 3rem;
         }
@@ -42,6 +43,7 @@
                 margin-top: 1rem;
                 outline: none;
                 transition: border .3s ease-in-out;
+                width: 100%;
                 &:focus {
                     border: 1px solid #e72929;
                 }
