--- a/frontend/src/app/pages/register-page/register-page.component.scss
+++ b/frontend/src/app/pages/register-page/register-page.component.scss
@@ -2,19 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    height: 94.5vh;
     background-color: hsl(0, 34%, 49%);
     &__details {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 5rem;
-        margin: 3.5rem;
+        padding: 3rem;
         border: 1px solid #e72929;
         border-radius: 2rem;
         background-color: #ecc5c5;
-        height: 100%;
+        max-width: 90%;
+        box-sizing: border-box;
         &__title {
             margin-bottom: 2rem;
         }
@@ -109,4 +109,18 @@
 .error-list {
     color: red;
     font-size: 12px;
+}
+
+@media (max-width: 505px) {
+    .container {
+        &__details {
+            padding: 2rem;
+            &__title {
+                margin-bottom: 2rem;
+            }
+        }
+        &__form {
+            grid-template-columns: 1fr;           
+        }
+    }
 }
