--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
                 </li>
                 <li *ngIf="isAuth" class="menu-container">
                     <a routerLink="/dashboard">{{ userName }}</a>
-                    <div class="menu">
+                    <div class="menu cursor-pointer">
                         <a routerLink="/profile">Profile</a>
                         <a routerLink="/orders">Orders</a>
                         <a routerLink="/login" (click)="onLogout()">Logout</a>
