--- a/frontend/src/app/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/pages/checkout-page/checkout-page.component.html
@@ -1,22 +1,30 @@
-<div class="container">
-    <div class="content">
-        <app-title title="Order Form"></app-title>
-
-        <form [formGroup]="checkoutForm">
-            <text-input [control]="fc.name" label="Name"></text-input>
-            <text-input [control]="fc.address" label="Address"></text-input>
-        </form>
-
-        <order-items-list
-            [order]="order"
-        ></order-items-list>
-    </div>
-    <div class="map">
-        <app-title title="Choose your address on Map"></app-title>
-    </div>
-    <div class="buttons-container">
-        <div class="buttons">
-            <button (click)="createOrder()">Go To Payment</button>
+<app-notfound
+    [isVisible]="!order || !order.items.length"
+    notFoundMessage="Add Items to order!"
+    resetLinkText="Go to HomePage"
+></app-notfound>
+<ng-container *ngIf="order.items.length">
+    <div class="container">
+        <div class="content">
+            <app-title title="Checkout"></app-title>
+    
+            <form [formGroup]="checkoutForm">
+                <text-input [control]="fc.name" label="Name"></text-input>
+                <text-input [control]="fc.address" label="Address"></text-input>
+            </form>
+    
+            <order-items-list
+                [order]="order"
+            ></order-items-list>
+        </div>
+        <div class="map">
+            <app-title title="Choose your address on Map"></app-title>
+            <map [order]="order"></map>
+        </div>
+        <div class="buttons-container">
+            <div class="buttons">
+                <button (click)="createOrder()">Go To Payment</button>
+            </div>
         </div>
     </div>
-</div>
+</ng-container>
