add remove button if the user want to remove item before payment

--- a/frontend/src/app/components/order-items-list/order-items-list.component.html
+++ b/frontend/src/app/components/order-items-list/order-items-list.component.html
@@ -4,36 +4,43 @@
             <h3>Order Items:</h3>
         </td>
     </tr>
-    <tr *ngFor="let item of order.items">
-        <td>
-            <a routerLink="/food/{{item.food.id}}">
-                <img [src]="item.food.imageUrl" alt="image" />
-            </a>
-        </td>
-        <td>
-            {{ item.food.name }}
-        </td>
-        <td>
-            {{ item.food.price | currency }}
-        </td>
-        <td>
-            {{ item.quantity}}
-        </td>
-        <td>
-            {{ item.price | currency }}
-        </td>
-    </tr>
-    <tr>
-        <td colspan="3"></td>
-        <td>
-            <strong>
-                Total : 
-            </strong>
-        </td>
-        <td>
-            <strong>
-                {{ order.totalPrice | currency }}
-            </strong>
-        </td>
-    </tr>
+    <ng-container *ngFor="let item of order.items">
+        <tr>
+            <td>
+                <a routerLink="/food/{{item.food.id}}">
+                    <img [src]="item.food.imageUrl" alt="image" />
+                </a>
+            </td>
+            <td>
+                {{ item.food.name }}
+            </td>
+            <td>
+                {{ item.food.price | currency }}
+            </td>
+            <td>
+                {{ item.quantity}}
+            </td>
+            <td>
+                {{ item.price | currency }}
+            </td>
+        </tr>
+        <div>
+            <button class="remove-item" (click)="removeItem(item.food.id)">
+                Remove
+            </button>
+        </div>
+        <tr>
+            <td colspan="3"></td>
+            <td>
+                <strong>
+                    Total : 
+                </strong>
+            </td>
+            <td>
+                <strong>
+                    {{ order.totalPrice | currency }}
+                </strong>
+            </td>
+        </tr>
+    </ng-container>
 </table>
