--- a/frontend/src/app/components/notfound/notfound.component.html
+++ b/frontend/src/app/components/notfound/notfound.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="isVisible">
-    {{ notFoundMessage }}
+    <p class="message">
+        {{ notFoundMessage }}
+    </p>
     <a [routerLink]="resetLinkRoute">{{ resetLinkText }}</a>
 </div>
