--- a/frontend/src/app/pages/food-page/food-page.component.scss
+++ b/frontend/src/app/pages/food-page/food-page.component.scss
@@ -25,7 +25,7 @@ img {
     flex-direction: column;
     flex: 1 0;
     padding: 2rem;
-    color: black;
+    color: var(--primary-text-color);
     margin-left: 1rem;
 }
 
