--- a/frontend/src/app/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/pages/cart-page/cart-page.component.html
@@ -17,7 +17,7 @@
                 </div>
     
                 <div>
-                    <a routerLink="/food/{{ cartItem.food.id }}">
+                    <a class="container__food-name" routerLink="/food/{{ cartItem.food.id }}">
                         {{ cartItem.food.name }}
                     </a>
                 </div>
@@ -34,7 +34,7 @@
                     </select>
                 </div>
     
-                <div>
+                <div class="container__food-price">
                     {{ cartItem.price | currency }}
                 </div>
     
