--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -8,7 +8,9 @@
     <ng-container *ngFor="let food of foods">
         <li>
             <a routerLink="/food/{{ food.id }}">
-                <img [src]="food.imageUrl" [alt]="food.name" />
+                <div class="img__container">
+                    <img [src]="food.imageUrl" [alt]="food.name" />
+                </div>
             </a>
                 <div class="content">
                     <div class="name">
