--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -28,6 +28,13 @@ li a img {
     height: 14.5rem;
 }
 
+.img__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 .content {
     margin-top: 0.3rem;
     padding: .5rem 1rem;
@@ -77,15 +84,20 @@ li a img {
     flex: 3;
     text-align: right;
     margin-top: 1rem;
+    color: var(--primary-text-color);
+}
+
+.name {
+    color: var(--primary-text-color);
 }
 
 .price {
     position: absolute;
     bottom: 0;
     left: 0.9rem;
-    background-color: white;
+    background-color: var(--primary-bg-color);
     padding: .3rem 100% 0 0;
-    color: #414141;
+    color: var(--primary-text-color);
     margin-top: 0.7rem;
     font-size: 1.1rem;
 }
