--- a/frontend/src/app/pages/register-page/register-page.component.scss
+++ b/frontend/src/app/pages/register-page/register-page.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 94.5vh;
-    background-color: hsl(0, 34%, 49%);
+    background-color: var(--primary-login-bg-color);
     &__details {
         display: flex;
         flex-direction: column;
@@ -12,7 +12,7 @@
         padding: 3rem;
         border: 1px solid #e72929;
         border-radius: 2rem;
-        background-color: #ecc5c5;
+        background-color: var(--primary-login-bg-form);
         max-width: 90%;
         box-sizing: border-box;
         &__title {
@@ -20,7 +20,7 @@
         }
 
         &__error {
-            color: white;
+            color: var(--primary-text-color);
             background-color: red;
             padding: 1rem;
         }
