change the name of the title in the header

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a routerLink="/" class="logo">Hassan Restaurant</a>
+        <a routerLink="/" class="logo">Food Restaurant</a>
         <nav>
             <ul>
                 <li *ngIf="!isAuth">
