fix removal of items from the order list

--- a/frontend/src/app/components/order-items-list/order-items-list.component.html
+++ b/frontend/src/app/components/order-items-list/order-items-list.component.html
@@ -25,7 +25,7 @@
             </td>
         </tr>
         <div>
-            <button class="remove-item" (click)="removeItem(item.food.id)">
+            <button class="remove-item" (click)="removeItem(item)">
                 Remove
             </button>
         </div>
