--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <button class="find-location" (click)="findMyLocation()">
-        Find my Location
-    </button>
+    <div class="find-location" (click)="findMyLocation()">
+        <img [src]="locationIcon" alt="icon" />
+    </div>
     <div #map class="map"></div>
 </div>
