--- a/frontend/src/app/components/map/map.component.scss
+++ b/frontend/src/app/components/map/map.component.scss
@@ -13,16 +13,13 @@
 .find-location {
     position: absolute;
     margin: auto;
-    width: 15rem;
-    min-height: 3rem;
-    font-size: 1.2rem;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: 90%;
+    left: 95%;
     z-index: 1000;
-    background-color: #ffffff7c;
     cursor: pointer;
-    &:hover {
-        background-color: white;
+
+    & > img {
+        width: 1.5rem;
+        height: 1.5rem;
     }
 }
