--- a/frontend/src/app/components/order-items-list/order-items-list.component.html
+++ b/frontend/src/app/components/order-items-list/order-items-list.component.html
@@ -24,11 +24,13 @@
                 {{ item.price | currency }}
             </td>
         </tr>
-        <div>
-            <button class="remove-item" (click)="removeItem(item)">
-                Remove
-            </button>
-        </div>
+        <ng-container *ngIf="!isOrdered">
+            <div>
+                <button class="remove-item" (click)="removeItem(item)">
+                    Remove
+                </button>
+            </div>
+        </ng-container>
     </ng-container>
     <tr>
         <td colspan="3"></td>
